--- a/目次.html
+++ b/目次.html
@@ -59,7 +59,7 @@
   <nav>
     <h2>目次</h2>
     <ul>
-      <li><a href="https://newrootsjp.github.io/-/Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
+      <li><a href="https://newrootsjp.github.io/-/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
       <li><a href="page2.html">ページ2</a></li>
       <li><a href="page3.html">ページ3</a></li>
     </ul>
