--- a/目次.html
+++ b/目次.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>目次とコンテンツ表示</title>
+<title>目次連動コンテンツ表示</title>
 <style>
   body {
     font-family: "Yu Gothic", "ヒラギノ角ゴ Pro W3", Meiryo, sans-serif;
@@ -12,6 +12,7 @@
     display: flex;
     height: 100vh;
     box-sizing: border-box;
+    background: #f9f9f9;
   }
   #toc {
     width: 30%;
@@ -19,25 +20,42 @@
     padding-right: 20px;
     overflow-y: auto;
   }
+  #toc h1 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+  }
+  #toc ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  #toc li {
+    margin-bottom: 0.5em;
+    cursor: pointer;
+    color: #0066cc;
+  }
+  #toc li:hover {
+    text-decoration: underline;
+  }
+  #toc li.active {
+    font-weight: bold;
+    color: #003366;
+  }
   #content {
     width: 70%;
     padding-left: 20px;
     overflow-y: auto;
   }
-  h1 {
-    font-size: 1.5em;
-    margin-bottom: 1em;
+  #content h2 {
+    font-size: 1.4em;
+    margin-top: 0;
   }
-  ul {
-    padding-left: 1em;
-  }
-  li {
-    margin-bottom: 0.5em;
+  #content p {
+    line-height: 1.6;
   }
 </style>
 </head>
 <body>
-  <nav id="toc">
+  <nav id="toc" aria-label="目次">
     <h1>目次</h1>
     <ul>
       <li><a href="https://newrootsjp.github.io/-/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
@@ -59,13 +77,119 @@
       <li><a href="https://newrootsjp.github.io/-/17.Billie (loving arms).html">17.Billie (loving arms)</a></li>
       <li><a href="https://newrootsjp.github.io/-/18.Marco (and everyone).html">18.Marco (and everyone)</a></li>
       <li><a href="https://newrootsjp.github.io/-/19.Delilah (pull me out of this).html">19.Delilah (pull me out of this)</a></li>
-      
-      <li>Delilah (pull me out of this)</li>
     </ul>
   </nav>
-  <main id="content">
-    <h1>ようこそ</h1>
-    <p>右側（または下部）にコンテンツを表示します。</p>
+
+  <main id="content" tabindex="0">
+    <h2>ようこそ</h2>
+    <p>目次の項目をクリックすると、ここに対応するコンテンツが表示されます。</p>
   </main>
+
+<script>
+  // 各目次項目と対応コンテンツのデータ
+  const contentData = {
+    kyle: {
+      title: "Kyle (I Found You)",
+      body: "Kyle の曲「I Found You」の詳細や歌詞、解説などをここに記述します。"
+    },
+    bleu: {
+      title: "Bleu (better with time)",
+      body: "Bleu の曲「better with time」の詳細や歌詞、解説などをここに記述します。"
+    },
+    glow: {
+      title: "glow",
+      body: "「glow」の曲情報や解説です。"
+    },
+    adore: {
+      title: "adore u",
+      body: "「adore u」の歌詞や解説はこちら。"
+    },
+    places: {
+      title: "places to be",
+      body: "「places to be」の詳細情報など。"
+    },
+    victory: {
+      title: "Victory Lap",
+      body: "「Victory Lap」の内容や概要です。"
+    },
+    victoryfour: {
+      title: "Victory Lap Four",
+      body: "「Victory Lap Four」の説明や歌詞を載せます。"
+    },
+    jungle: {
+      title: "Jungle",
+      body: "「Jungle」の曲紹介。"
+    },
+    rumble: {
+      title: "Rumble",
+      body: "「Rumble」の詳細コンテンツ。"
+    },
+    peace: {
+      title: "peace u need",
+      body: "「peace u need」の内容です。"
+    },
+    leavemealone: {
+      title: "leavemealone",
+      body: "「leavemealone」の解説や歌詞。"
+    },
+    turnonlights: {
+      title: "Turn On the Lights again..",
+      body: "「Turn On the Lights again..」の詳細。"
+    },
+    danielle: {
+      title: "Danielle (smile on my face)",
+      body: "「Danielle (smile on my face)」の紹介。"
+    },
+    angie: {
+      title: "Angie (I’ve Been Lost)",
+      body: "「Angie (I’ve Been Lost)」の説明。"
+    },
+    clara: {
+      title: "Clara (the night is dark)",
+      body: "「Clara (the night is dark)」の内容。"
+    },
+    marea: {
+      title: "Marea (we’ve lost dancing)",
+      body: "「Marea (we’ve lost dancing)」の紹介。"
+    },
+    billie: {
+      title: "Billie (loving arms)",
+      body: "「Billie (loving arms)」について。"
+    },
+    marco: {
+      title: "Marco (and everyone)",
+      body: "「Marco (and everyone)」の説明文。"
+    },
+    delilah: {
+      title: "Delilah (pull me out of this)",
+      body: "「Delilah (pull me out of this)」のコンテンツ情報。"
+    }
+  };
+
+  const toc = document.querySelectorAll("#toc li");
+  const content = document.getElementById("content");
+
+  function setActive(id) {
+    toc.forEach(li => {
+      li.classList.toggle("active", li.dataset.id === id);
+    });
+  }
+
+  function showContent(id) {
+    const data = contentData[id];
+    if (!data) return;
+    content.innerHTML = `<h2>${data.title}</h2><p>${data.body}</p>`;
+    setActive(id);
+  }
+
+  toc.forEach(li => {
+    li.addEventListener("click", () => {
+      const id = li.dataset.id;
+      showContent(id);
+      // フォーカスを当ててアクセシビリティ向上
+      content.focus();
+    });
+  });
+</script>
 </body>
 </html>
