--- a/3.glow.html
+++ b/3.glow.html
@@ -3,49 +3,48 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>glow – 詳細解説</title>
+<title>glow – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fcfcfc;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
-  h1, h2, h3 {
-    color: #0066cc;
+  h1, h2 {
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.8em;
   }
-  p {
+  p, ul, li {
     margin: 0.6em 0;
   }
   ul {
     padding-left: 1.4em;
   }
   ul li {
-    margin: 0.35em 0;
+    margin-bottom: 0.4em;
   }
-  /* 目次スタイル */
   #toc {
-    background: #e3f0ff;
-    border: 1px solid #99ccee;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
     padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
   }
   #toc ul {
-    padding-left: 0;
     list-style: none;
     margin: 0;
+    padding-left: 0;
   }
   #toc ul li {
-    margin: 0.3em 0;
+    margin: 0.4em 0;
   }
   #toc a {
     color: #0055aa;
@@ -56,11 +55,10 @@
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
-      padding: 0.8em 1em;
       font-size: 1em;
+      padding: 0.8em 1em;
     }
     h1 {
       font-size: 1.5em;
@@ -73,53 +71,42 @@
 </head>
 <body>
 
-<h1>glow – 詳細解説</h1>
+<h1>glow – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#summary">主なポイント</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">歌詞について</a></li>
-    <li><a href="#translation">歌詞の和訳</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞</a></li>
+    <li><a href="#interpretation">解釈・詩的考察</a></li>
   </ul>
 </nav>
 
-<section id="summary">
-  <h2>主なポイント</h2>
-  <ul>
-    <li>収録アルバム：<strong>Ten Days</strong>（2024年9月6日リリース）</li>
-    <li>楽曲長さ：7分17秒</li>
-    <li>ジャンル：プログレッシブ・ハウス／エモーショナル・ダンス</li>
-    <li>コラボレーター：Duskus、Four Tet、Joy Anonymous、Skrillex</li>
-  </ul>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>“glow”は、Fred again..が友人かつ同郷のプロデューサーたちと初めて本格的に共作した楽曲の一つです。制作の流れは以下の通りです。</p>
-  <ul>
-    <li><strong>コラボレーションの呼びかけ</strong><br>
-      Fred again..は、アルバム制作の初期段階で「シーンをリードするサウンドを一緒に作りたい」と考え、Four Tet（Kieran Hebden）とSkrillex（Sonny Moore）に声をかけました。さらに、UKの新進プロデューサー・デュオDuskus（Louis Curran & Michael Todd Gordon）と、エモーショナル・コーラスを得意とするJoy Anonymousも招聘しました。
-    </li>
-    <li><strong>サウンドデザインとアレンジ</strong><br>
-      メインのシンセティック・リフは、Duskusが作成したピッチモジュレーションとノイズレイヤーを含むサイン波サンプルをベースに、Fred自身がチューブ・サチュレーションとリバーブを重ねて“一発録りワンショット”サンプルとして組み込んでいます。Four Tetは、このリフを多重に重ねつつ、細かいエフェクトの配置や空間演出を担当。またSkrillexは最終ミックス時のマスターリング段階でフィルター処理やダイナミクス調整を行い、クラブサウンド的なパンチと煌めきをプラスしました。
-    </li>
-    <li><strong>細部の磨き込み</strong><br>
-      Fredは「日常のエモーションをそのままダンスミュージックに変換する」という自身のコンセプトのもと、セッション中にメンバーが録音した何気ないパーカッションや声のスキャッターをサンプリングして配置。最終的に7分を超える大作にまとめ上げ、サビ前後の盛り上がりから静寂へのフェードアウトまで、エモーショナルな起伏を最大化しています。
-    </li>
-  </ul>
+  <p><strong>“glow”</strong>は、Fred again..が2024年9月6日にリリースしたアルバム『Ten Days』に収録されている楽曲で、約7分17秒のプログレッシブ・ハウスとエモーショナル・ダンスが融合したトラックです。</p>
+  <p>本作はFred again..が初めて同郷かつ友人のプロデューサーたちと本格的に共作した作品の一つであり、彼の音楽的成長や新たな共同作業の到達点を示しています。</p>
+  <p>制作はアルバム制作の初期段階から始まり、Fred again..がUK音楽シーンの重鎮であるFour Tet（Kieran Hebden）とSkrillex（Sonny Moore）に制作参加を依頼。さらに、新進気鋭のUKプロデューサーデュオDuskus（Louis Curran &amp; Michael Todd Gordon）と、繊細かつエモーショナルなコーラスで知られるJoy Anonymousも加わることで、多彩なメンバーが集結しました。</p>
+  <p>メインのシンセリフはDuskusがピッチモジュレーションとノイズレイヤーを含むサイン波のワンショットサンプルを制作し、Fred again..がチューブ・サチュレーションとリバーブを重ねて楽曲に取り込みました。Four Tetはこれを多重レイヤーで重ね、繊細なエフェクトや空間演出を施し、Skrillexはマスタリングにおいてフィルター処理やダイナミクス調整を担当し、クラブ向けの鮮烈なパンチと煌めきを与えています。</p>
+  <p>制作過程では、Fredが日常の細かなパーカッションや声の断片を録音・サンプリングし、楽曲に生々しい感情の断片を散りばめる試みがなされました。これにより、7分超の大作ながら起伏のあるエモーショナルなストーリーが立体的に展開されていきます。</p>
 </section>
 
 <section id="lyrics">
-  <h2>歌詞について</h2>
-  <p>“glow”はインストゥルメンタルのトラックであり、歌詞は存在しません。</p>
+  <h2>英語歌詞</h2>
+  <p>“glow”はインストゥルメンタルであり、明確な歌詞は存在しません。</p>
+  <p>タイトルの「glow」（輝き）が意味する通り、楽曲は夜明け前の広大なダンスフロアに差し込む一筋の光や希望の煌めきを音響と構成で表現しています。</p>
 </section>
 
-<section id="translation">
-  <h2>歌詞の和訳</h2>
-  <p>歌詞がないため和訳はありませんが、タイトルの「glow」（輝き）が示すように、楽曲は夜明け前の広大なダンスフロアに差し込む一筋の光のイメージや、希望と感情の煌めきを表現しています。</p>
-  <p>本トラックは、Fred again..の「日常の記録をダンスフロアのアンセムに変える」という手法の中でも最もストレートにそのコンセプトが発揮された作品と言えます。各コラボレーターの強みが活かされつつ、Fred自身の感情的アプローチが楽曲全体を貫いています。</p>
+<section id="interpretation">
+  <h2>解釈・詩的考察</h2>
+  <p>“glow”は、Fred again..の音楽的探求心が結実した作品であり、感情豊かで内省的な世界観とクラブミュージックの力強さが高次元で融合されています。</p>
+  <ul>
+    <li>核となるシンセリフはDuskusのピッチシフトとノイズレイヤーで有機的な揺らぎと生命感を創出し、まるで生きた生物のような音響を生み出しています。</li>
+    <li>Four Tetの重ねる多重レイヤーと空間的エフェクトは楽曲の広がりを与え、聴き手を没入的な音の世界に誘います。</li>
+    <li>Skrillexのマスタリングによるパンチと煌めきが楽曲にクラブでの躍動感を付加し、聴覚的な高揚感を生み出しています。</li>
+    <li>Joy Anonymousの声のスキャッターは感情のアクセントとして楽曲に温度と人間味をもたらし、Fred again..の「日常の断片を音楽に昇華する」というコンセプトと見事に結びついています。</li>
+  </ul>
+  <p>総じて、“glow”は夜通し踊りつつも内面の揺らぎや輝きを感じさせる、情緒豊かで深みのあるダンスミュージックの新たな形を示した作品です。</p>
 </section>
 
 </body>
