--- a/4.adore u.html
+++ b/4.adore u.html
@@ -3,43 +3,42 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>“adore u” – 詳細解説</title>
+<title>adore u – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fffafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
-  h1, h2, h3 {
-    font-weight: bold;
+  h1, h2 {
     color: #0077cc;
+    font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.4em;
+    margin-bottom: 0.6em;
   }
-  p {
-    margin: 0.5em 0;
+  p, pre, ul, li {
+    margin: 0.6em 0;
   }
   ul {
-    padding-left: 1.2em;
+    padding-left: 1.4em;
   }
   ul li {
-    margin: 0.4em 0;
+    margin-bottom: 0.4em;
   }
   pre {
     background: #f7f7f7;
-    padding: 1em;
     border-radius: 6px;
+    padding: 1em;
     white-space: pre-wrap;
     word-break: break-word;
-    margin: 0.5em 0 1em 0;
+    font-family: "Courier New", Courier, monospace;
   }
-  /* 目次エリア */
   #toc {
-    background: #dcefff;
-    border: 1px solid #9fc9ff;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
     padding: 1em 1em 1em 1.2em;
     margin-bottom: 1.6em;
@@ -56,7 +55,7 @@
     margin: 0.3em 0;
   }
   #toc a {
-    color: #005099;
+    color: #0055aa;
     text-decoration: none;
     font-weight: 600;
   }
@@ -64,7 +63,6 @@
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -81,50 +79,115 @@
 </head>
 <body>
 
-<h1>“adore u” – 詳細解説</h1>
+<h1>adore u – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#album-info">収録アルバム・基本情報</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#sample-info">サンプリング元</a></li>
-    <li><a href="#lyrics-summary">歌詞の特徴</a></li>
-    <li><a href="#interpretation">日本語訳・意訳・解釈</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="album-info">
-  <h2>収録アルバム・基本情報</h2>
-  <p><strong>収録アルバム：</strong>Ten Days (2024)</p>
-  <p><strong>リリース日：</strong>2023年8月11日</p>
-  <p><strong>ジャンル：</strong>ハウス / エモーショナル・ダンス</p>
-  <p><strong>コラボレーター：</strong>Obongjayar（ボーカル）</p>
-  <p><strong>プロデューサー／エンジニア：</strong>Fred again..（作曲／プロデュース／ミキシング／マスタリング）</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>“adore u”はFred again..が妹への想いを込めて制作した一曲で、ロンドンを拠点とするナイジェリア出身のシンガーObongjayar（Steven Umoh）のヴォーカルをフィーチャーしています。</p>
-  <p>Obongjayarの歌唱は、彼自身の2022年のデビュー・アルバム『Some Nights I Dream Of Doors』収録曲“I Wish It Was Me”からのサンプリング「When you pray, you’re answered…」をベースにしているとのことです。</p>
-  <p>Fred again..は2023年6月23日のGlastonbury Festivalでこの曲を初披露し、8月4日にはシカゴ［Aragon Ballroom］でObongjayarと共演してライブ初公開しました。</p>
-  <p>サウンド面では、バブリングするシンセとヒップホップ調のビート、Fred自身のダンサブルなエフェクト処理が融合し、温かくエモーショナルな質感を生み出しています。</p>
+  <p><strong>“adore u”</strong>は、Fred again..が2023年8月11日にリリースした楽曲で、2024年のアルバム『Ten Days』に収録されています。ハウスやエモーショナル・ダンスに分類されるこのトラックは、Fredが妹に向けた深い愛情を込めて制作した一曲であり、ロンドンを拠点とするナイジェリア出身のシンガー、Obongjayar（Steven Umoh）のソウルフルなボーカルをフィーチャーしています。</p>
+  
+  <p>制作の過程では、FredはObongjayarの2022年のデビューアルバム『Some Nights I Dream Of Doors』に収録された楽曲“I Wish It Was Me”からのフレーズ「When you pray, you’re answered…」をサンプリングとして用い、これが楽曲の重要な感情的軸となりました。Fred自身は、この声のサンプルに和らぎと祈りの意味合いを感じ取り、自らのサウンドと融合させることで、やさしくも力強いトラックを完成させました。</p>
+  
+  <p>初披露は2023年6月23日に開催されたグラストンベリー・フェスティバルで行われ、同年8月4日にはシカゴのAragon BallroomにてObongjayarとの共演も果たし、ライブシーンでの評価も高い作品となっています。サウンドの特徴としては、バブリングするシンセサイザーの質感と、ヒップホップを思わせるビート、Fred自身のダンサブルなエフェクト処理が調和し、聴く者に温かくエモーショナルな感覚をもたらします。</p>
 </section>
 
-<section id="sample-info">
-  <h2>サンプリング元</h2>
-  <p>Obongjayarの歌唱は、彼の2022年のデビューアルバム『Some Nights I Dream Of Doors』収録曲「I Wish It Was Me」からのフレーズ「When you pray, you're answered…」をサンプリングしています。</p>
+<section id="lyrics">
+  <h2>英語歌詞</h2>
+  <pre>
+[Verse]
+
+You’re so much better at everything  
+I think no one in my chest compares  
+I adore you  
+Ooh-ooh, I adore you  
+
+I came first but you’re ahead, ahead beyond your years  
+People try, try to learn this thing you’ve always been  
+And I adore you  
+Ooh-ooh, I adore you  
+
+[Bridge]
+
+When you pray you’re answered  
+You walk through life just like a dancer  
+If I had my way everyday would be your parade  
+
+When you pray you’re answered  
+You walk through life just like a dancer  
+If I had my way everyday would be your parade  
+
+[Chorus / Refrain]
+
+Ooh, I adore you  
+Ooh-ooh, I adore you  
+And I pray, pray you never lose your star  
+I’m so proud, proud of all that you are  
+Ooh, I adore you  
+Ooh-ooh, I adore you  
+And I pray, pray you never lose your star  
+I’m so proud, proud of all that you are  
+
+[Outro]
+
+Ooh, I adore you  
+Ooh, I adore you
+  </pre>
 </section>
 
-<section id="lyrics-summary">
-  <h2>歌詞の特徴</h2>
-  <p>歌詞の一部に「I adore you」を何度も反復するコーラスを軸に構成されており、“癒しと祝福”を感じさせる構成となっています。</p>
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>〈Verse〉<br>
+    「君は何をしてもずっと優れている<br>
+    僕の胸に勝るものはいないと思う<br>
+    僕は君を崇拝している<br>
+    ああ、君を崇拝している</p>
+  
+  <p>僕が最初だったけれど、君はもう遥か先を行っている<br>
+    人々は君がずっと持っていたものを学ぼうと必死になる<br>
+    でも僕は君を崇拝している<br>
+    ああ、君を崇拝している</p>
+
+  <p>〈Bridge〉<br>
+    「君が祈ると、必ず答えが返ってくる<br>
+    君はまるでダンサーのように人生を歩む<br>
+    もし僕の思い通りにできるなら、毎日が君のパレードだろう<br>
+    君が祈ると、必ず答えが返ってくる<br>
+    君はまるでダンサーのように人生を歩む<br>
+    もし僕の思い通りにできるなら、毎日が君のパレードだろう」</p>
+  
+  <p>〈Chorus / Refrain〉<br>
+  「ああ、君を崇拝している<br>
+  ああ、君を崇拝している<br>
+  どうか君がその輝きを失いませんように<br>
+  僕は君のすべてを誇りに思う<br>
+  ああ、君を崇拝している<br>
+  ああ、君を崇拝している<br>
+  どうか君がその輝きを失いませんように<br>
+  僕は君のすべてを誇りに思う」</p>
+
+  <p>〈Outro〉<br>
+    「ああ、君を崇拝している<br>
+    ああ、君を崇拝している」</p>
 </section>
 
 <section id="interpretation">
-  <h2>日本語訳・意訳・解釈</h2>
-  <p>この曲は「相手の才能や存在の輝きに対する純粋な憧れと賞賛」をテーマにしています。</p>
-  <p>コーラスの繰り返しは、まるで祝福の念をリスナーにも伝搬させるかのように、温かく包み込むような効果を生み出しています。</p>
+  <h2>意訳・詩的解釈</h2>
+  <p>この曲は、<strong>相手に対して深い尊敬と愛情を表現し、純粋な賛美の歌として成立しています。</strong></p>
+  <p>「君は何をしても優れている」という表現は、対象への圧倒的な称賛を示す一方で、自身との比較に基づく複雑な感情も内包しています。</p>
+  <p>ブリッジで歌われる「祈りが必ず答えとなる」「ダンサーのように人生を歩む」という比喩は、対象の強さや自由で軽やかな生き様を称賛しています。</p>
+  <p>コーラスの繰り返しは聴き手に祝福の念を広げ、同時に「輝きを失わないでほしい」という祈りは、末永い幸せを願う親密な想いを伝えます。</p>
+  <p>Fred again..のプロダクションは、Obongjayarのソウルフルなボーカルと繊細なシンセビートが調和し、感情豊かでありながらもダンサブルなトラックとして結実しています。</p>
+  <p>この曲は、兄妹間の絆、尊敬、支え合いを象徴しながら、聴く者へ普遍的な愛と希望を届ける作品となっています。</p>
 </section>
 
 </body>
