--- a/9.Rumble.html
+++ b/9.Rumble.html
@@ -3,45 +3,45 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Rumble – 詳細解説</title>
+<title>Rumble – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
-  h1, h2, h3 {
-    color: #0073cc;
+  h1, h2 {
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
-  }
-  pre {
-    background: #f4f4f4;
-    padding: 1em;
-    border-radius: 6px;
-    white-space: pre-wrap;
-    word-break: break-word;
-    margin: 0.6em 0 1em 0;
   }
   ul {
     padding-left: 1.4em;
   }
   ul li {
-    margin: 0.4em 0;
+    margin-bottom: 0.4em;
+  }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
-    background: #dcefff;
-    border: 1px solid #8eb7ff;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
     padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -52,22 +52,21 @@
     padding-left: 0;
   }
   #toc ul li {
-    margin: 0.25em 0;
+    margin: 0.3em 0;
   }
   #toc a {
-    color: #0066cc;
-    font-weight: 600;
+    color: #0055aa;
     text-decoration: none;
+    font-weight: 600;
   }
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
-      font-size: 1em;
       padding: 0.8em 1em;
+      font-size: 1em;
     }
     h1 {
       font-size: 1.5em;
@@ -80,54 +79,49 @@
 </head>
 <body>
 
-<h1>Rumble – 詳細解説</h1>
+<h1>Rumble – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#points">主なポイント</a></li>
-    <li><a href="#collaborators">コラボレーター</a></li>
-    <li><a href="#release">リリースと披露</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
-    <li><a href="#translation">日本語訳・意訳</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="points">
-  <h2>主なポイント</h2>
-  <ul>
-    <li>リリース日：2023年1月4日</li>
-    <li>ジャンル：グライム／ダブステップ／ジャングルなどエクスペリメンタルなエレクトロニック</li>
-    <li>アルバム収録：Skrillex『Quest for Fire』第1弾シングル</li>
-  </ul>
-</section>
-
-<section id="collaborators">
-  <h2>コラボレーター</h2>
-  <ul>
-    <li>プロデュース：Skrillex、Fred Again..</li>
-    <li>MC：Flowdan（グライムMC）</li>
-    <li>ボーカル：Elley Duhé（未クレジット）</li>
-    <li>サンプル提供：BEAM</li>
-  </ul>
-</section>
-
-<section id="release">
-  <h2>リリースと披露</h2>
-  <p>Fred Again..はBoiler Roomでのライブ（2022年7月）で初披露し、その際に観客の盛り上がりが非常に高かったことで正式リリースが決定しました。</p>
-  <p>Four TetやBob Ragらとの共同調整のもと、Skrillexがマスタリングやミックスを行い、グライム特有の荒々しさと振動的なダンスサウンドが融合された作品に仕上がっています。</p>
+<section id="episode">
+  <h2>制作時のエピソード</h2>
+  <p><strong>“Rumble”</strong> は、Fred again..が2023年1月4日にリリースしたシングルであり、Skrillex（プロデューサー／エレクトロニック）、Flowdan（グライムMC）、Elley Duhé（未クレジットボーカル）、BEAM（サンプル提供）といった豪華なコラボ陣が参加しています。</p>
+  <p>この楽曲は、もともと2018年にFred again..とFlowdanのスタジオセッションから生まれたものです。Fredが制作したデモをSkrillexに聴かせたことがきっかけでプロジェクトが加速し、Skrillexは楽曲のステムデータを受け取り自らリメイクを試みました。しかし彼自身が「曲を台無しにしたと思った」と後に語り、そこからBob RagやFour Tetを巻き込んで長期間にわたりミックスやサウンドデザインの調整が重ねられることとなりました。</p>
+  <p>2022年7月、Fred again..がBoiler Room Tokyoで「Rumble」を初披露した際、オーディエンスの爆発的な反応を受けて本格リリースが決定。こうした即興感溢れるライブからオンラインへの拡散が、本楽曲のバイラル的なヒットを牽引しています。</p>
+  <p>また本作にはElley Duhéの神秘的で情感のあるボーカルがサンプルとして加わり、さらにBEAMの楽曲「Selecta」からの音声片が活用されるなど、多彩な要素が折り重なっています。Skrillex、Fred again..、Flowdanそれぞれの個性が共鳴し合い、ジャングル／グライム／ダブステップにまたがるエッジの効いたクラブトラックへと仕上げられました。</p>
 </section>
 
 <section id="lyrics">
   <h2>英語歌詞（主要パート）</h2>
-  <pre>
+<pre>
 [Intro: Elley Duhé]
 Hear the rumble  
 Hear the rumble, yeah, yeah  
 Hear the—
 
-[Bridge]
-DJ, pull up the tune, bun up the room, straight to the— (×4)
+[Verse 1: Flowdan]
+Run for dem life, when I step into the jungle  
+Said they wanna group up  
+They better move up, never gonna win a Royal Rumble  
+And when I come through, you know what I love do  
+I send shots for your team and leader  
+I make a witness decide to vacate  
+The war’s gettin’ sweet just like a Ribena  
+Yo, listen, you hear that?  
+Killers in the jungle  
+Killers in the jungle  
+Killers in the jungle
+
+[Bridge]  
+DJ, pull up the tune, bun up the room, straight to the—
 
 [Verse 2: Flowdan]
 Yo, you hear that? Over, smell the aroma  
@@ -137,37 +131,78 @@ Listen, you hear that? Shots gettin’ fired in a warzone
 Rifle a spin like gorillas in the mist  
 Nothin’ ain’t criss when you end up in a jungle  
 Yo, listen, you hear that?  
-Killers in the jungle (×3)
-  </pre>
+Killers in the jungle  
+Killers in the jungle  
+Killers in the jungle
+
+[Pre-Drop / Outro: Flowdan & Elley Duhé]
+Jungle, the jungle…  
+Hear-hear-hear-hear-hear the rumble, yeah, yeah  
+Hear the rumble, yeah, yeah  
+DJ, pull up the tune, bun up the room, straight to the moon again
+</pre>
 </section>
 
 <section id="translation">
-  <h2>日本語訳・意訳</h2>
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>
+    〈Intro〉<br>
+    「地響きが聞こえる  
+    地響きが聞こえる、そう、そう  
+    …聞こえるか—」
+  </p>
+  <p>
+    〈Verse 1〉<br>
+    「命がけで逃げろ、俺がジャングルに入ったら  
+    奴らは団結したがる  
+    さっさと動け、ロイヤルランブルには勝てない  
+    俺が来たら何をするかわかってるだろ  
+    仲間もリーダーも狙い撃ち  
+    目撃者は逃げ出したくなる  
+    戦の場はライビーナみたいに甘くなった  
+    おい、聞こえるか？  
+    ジャングルの殺し屋たち  
+    ジャングルの殺し屋たち  
+    ジャングルの殺し屋たち」
+  </p>
+  <p>
+    〈Bridge〉<br>
+    「DJ、チューンを上げろ、部屋を燃やせ、一直線に—」
+  </p>
+  <p>
+    〈Verse 2〉<br>
+    「おい、聞こえるか？香りが漂う  
+    奴らはずっと前に死んだ、俺は手を抜かない  
+    皮をはいでも昏睡から目覚めない  
+    聞こえるか？戦場で銃声が鳴っている  
+    霧の中ゴリラみたいにライフルが回る  
+    ジャングルにハマったら何もかも冴えない  
+    おい、聞こえるか？  
+    ジャングルの殺し屋たち…」
+  </p>
+  <p>
+    〈Pre-Drop / Outro〉<br>
+    「ジャングル、ジャングル…  
+    地響きが聞こえる、そう、そう  
+    DJ、チューンを上げろ、部屋を燃やせ、月まで一直線に—」
+  </p>
+</section>
 
-  <p><strong>直訳例（一部抜粋）</strong></p>
-  <p>ゴロゴロと音が聞こえる<br>
-  ゴロゴロ、そう、そう<br>
-  さあ、聞いてくれ—</p>
-
-  <p>DJ、曲をかけて、部屋を熱くして、一気に―（×4）</p>
-
-  <p>おい、聞こえるか？香りが漂っている<br>
-  やつらはもう長いこと死んでいる、俺は止まらない<br>
-  皮を向こうとしても昏睡から目覚められない<br>
-  聞こえるか？戦場で銃声が響く<br>
-  霧の中でライフルが回るゴリラのように<br>
-  ジャングルに行けば何も見落とさない<br>
-  聞こえるか？<br>
-  ジャングルの殺し屋どもが（×3）</p>
-
-  <p><strong>意訳・詩的解釈</strong></p>
-  <p>本曲では「ジャングル」を都市やクラブ空間の比喩として用い、そこでの生存競争や荒々しいサヴァイバルを描いています。<br>
-  「ゴロゴロ」という表現は、激しい低音の轟音や危機感を象徴し、<br>
-  「ライフルが回るゴリラのように」は暴力的かつ野性的な闘争心を喚起します。<br>
-  サウンドはダークで躍動的、Flowdanの荒々しいラップが「ジャングルの殺し屋」＝熾烈な戦いの中に生き残る者を象徴。<br>
-  Elley Duhéのボーカルは不穏さと美しさを織り交ぜ、独特の緊張感を生み出しています。</p>
-
+<section id="interpretation">
+  <h2>意訳・詩的解釈</h2>
+  <p>
+    この「Rumble」は、都市やクラブ空間を“ジャングル”になぞらえて、激しい生存競争と刹那の高揚感・サバイバルのスリルを同時に描写しています。
+    Flowdanによる荒々しくもリズミカルなラップは、「命がけで逃げろ」や「殺し屋たちが潜むジャングル」といったサバイバル感を強く表現し、グライムのアティチュードをそのまま体現しています。
+  </p>
+  <p>
+    一方で、Elley Duhéのピッチアップされた神秘的なボーカルが、闇に差し込む一筋の光のような役割を果たし、楽曲全体に不穏さと祝祭的な熱気をもたらしています。「DJ、チューンを上げろ、部屋を燃やせ」という繰り返しは、ダンスフロア全体を揺るがす爆発的な瞬間を呼び起こしており、ライブでも特に観客の咆哮と重低音が響き合う象徴的セクションです。
+  </p>
+  <p>
+    Fred again..とSkrillexのプロダクションは、グライムとジャングル／ダブステップのハードなビートとエレクトロニック・サウンドの最新モードを見事に融合し、現代ダンスミュージックの最前線を提示しています。
+  </p>
 </section>
 
 </body>
 </html>
+
