Update 10.peace u need.html

--- a/10.peace u need.html
+++ b/10.peace u need.html
@@ -3,37 +3,45 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>peace u need – 詳細解説</title>
+<title>peace u need – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fcfcfc;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
-  h1, h2, h3 {
-    color: #0066cc;
+  h1, h2 {
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
   }
   ul {
     padding-left: 1.4em;
   }
   ul li {
-    margin: 0.4em 0;
+    margin-bottom: 0.4em;
+  }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
-    background: #def0ff;
-    border: 1px solid #a5c9ff;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
     padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -55,16 +63,6 @@
   #toc a:focus {
     text-decoration: underline;
   }
-  pre {
-    background: #f7f7f7;
-    padding: 1em;
-    border-radius: 6px;
-    white-space: pre-wrap;
-    word-break: break-word;
-    margin: 0.6em 0 1.2em 0;
-    font-family: "Courier New", Courier, monospace;
-  }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -81,32 +79,37 @@
 </head>
 <body>
 
-<h1>peace u need – 詳細解説</h1>
+<h1>peace u need – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#overview">楽曲概要</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">英語歌詞（主要フル・ヴァージョン）</a></li>
-    <li><a href="#translation">日本語訳・意訳</a></li>
-    <li><a href="#analysis">解釈・詩的考察</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="overview">
-  <h2>楽曲概要</h2>
-  <p>本楽曲はFred again..とJoy Anonymousによるコラボレーション作で、2024年9月6日にリリースされたアルバム『Ten Days』収録の第9トラックです。静寂の中で呼び合う声とエモーショナルなダンス・サウンドが織りなす、別離と願いの物語を描いています。</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>“peace u need”は、Fred again..が「日常から生まれるエモーションをダンスミュージックへ昇華する」手法を継承し、DJデュオJoy Anonymous（Henry Counsell）と共同制作した作品です。</p>
-  <p>2024年2月27日にシドニー・オペラハウスでのサプライズ・ポップアップ公演で初披露され、125,000人のオンライン・キューを瞬時に埋め尽くす熱狂が生まれました。Henry Counsellのパフォーマンスは特に称賛されており、その日のライブ録音も限定ヴァイナルでリリースされています。</p>
+  <p>
+    <strong>“peace u need”</strong> は、Fred again..とDJデュオJoy Anonymous（ヘンリー・カウンセル）によるコラボレーション作で、
+    2024年9月6日にリリースされたアルバム『Ten Days』の第9トラックに収録されています。Fred again..の「日常の断片を切り取り、エモーショナルなダンスミュージックへと昇華する」という独特の制作哲学が色濃く反映された作品です。
+  </p>
+  <p>
+    本楽曲は、2024年2月27日にオーストラリア・シドニーのオペラハウスにてサプライズで開催されたポップアップ公演で初披露されました。
+    この時、オンラインの視聴待機キューは12万5千人を超え、瞬時に完売する熱狂的な反響を呼び起こしています。
+    公演中のライブ録音は限定ヴァイナルとして後にリリースされ、特にJoy AnonymousのメンバーでありFredの親友と称されるヘンリーのパフォーマンスが高い評価を得ました。
+  </p>
+  <p>
+    Fred again..はJoy Anonymousとの制作に際して、日々の会話やスタジオでの何気ないやり取り、呟きまでも貴重なサンプリング素材として活用し、
+    楽曲に有機的な感情の起伏を持たせています。こうしたリアルな生活感の反映が、本作の内省的かつ表現豊かなサウンドスケープを形作っています。
+  </p>
 </section>
 
 <section id="lyrics">
-  <h2>英語歌詞（主要フル・ヴァージョン）</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
 [Verse 1: Fred again.. & Snoh Aalegra]
 My head, my heart, my loss, my mind  
@@ -116,13 +119,13 @@ It keeps coming, it keeps coming up
 It keeps coming more and more  
 I still call your name these quiet nights  
 
-[Chorus: Fred again.. & Snoh Aalegra]  
+[Chorus: Fred again.. & Snoh Aalegra]
 I let you take a piece of me (Piece of mine, piece of mine)  
 I hope you get the peace you need (And I, and I)  
 I let you take a piece of me (Piece of mine, piece of mine)  
 I hope you get the peace you need (Peace you need, peace you need)  
 
-[Verse 2: Fred again.. & Snoh Aalegra]  
+[Verse 2: Fred again.. & Snoh Aalegra]
 My face, my hands, my joy, my life  
 I'm running up your stairs, I'm lost this time  
 (Si-, silence keeps clouding)  
@@ -130,7 +133,7 @@ It keeps coming, keeps coming up
 Oh, oh, I, I'm scared to live outside your light  
 (And I, and I, I)  
 
-[Chorus & Bridge: Fred again.. & Snoh Aalegra]  
+[Chorus & Bridge: Fred again.. & Snoh Aalegra]
 I let you take a piece of me...  
 I hope you get the peace you need...  
 (Piece of mine, piece of mine)×n  
@@ -139,23 +142,52 @@ Silence keeps clouding, silence keeps clouding
 </section>
 
 <section id="translation">
-  <h2>日本語訳・意訳</h2>
-  <p><strong>〈Verse 1〉</strong><br>
-    「私の頭、私の心、私の喪失、私の思考<br>
-    静かな夜にはまだあなたの名前を呼ぶ<br>
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>〈Verse 1〉<br>
+    「僕の頭も心も、喪失も、思考も<br>
+    静かな夜にはあなたの名前を呼び続けている<br>
     （だって、静寂がいつも霞ませるから）<br>
-    その想いは何度も、何度も湧き上がる<br>
-    もっともっとやって来る<br>
-    私はまだ静かな夜にあなたの名前を呼ぶ」</p>
+    その想いは何度も何度も湧き上がってくる<br>
+    もっともっと、強くなっていく<br>
+    僕はまだこの静かな夜にあなたの名前を呼んでいる」
+  </p>
+  <p>〈Chorus〉<br>
+    「僕はあなたに自分の一部を差し出した（僕のかけらを、かけらを）<br>
+    どうかあなたが必要とする安らぎを得られますように（そう願っている）<br>
+    僕はあなたに自分の一部を差し出した（僕のかけらを、かけらを）<br>
+    どうかあなたが必要な平穏を手に入れられますように」
+  </p>
+  <p>〈Verse 2〉<br>
+    「僕の顔も、手も、喜びも、人生も<br>
+    あなたの階段を駆け上がる、今回も僕は途方に暮れている<br>
+    （だって、静寂がいつも霞ませる）<br>
+    その想いは繰り返し湧き上がる<br>
+    ああ、僕は、あなたの光の外で生きるのが怖いんだ<br>
+    （そして、僕はここにいる）」
+  </p>
+  <p>〈Chorus & Bridge〉<br>
+    「僕はあなたに自分の一部を差し出した…<br>
+    どうかあなたが必要な平穏を得られますように…<br>
+    （僕のかけら、かけらを）繰り返す<br>
+    静寂がいつも霞ませる、静寂がなおも覆う」
+  </p>
+</section>
 
-  <p><strong>〈Chorus〉</strong><br>
-    「私はあなたに私の一部を託した（私のかけら、私のかけら）<br>
-    どうかあなたが必要とする安らぎを得られますように<br>
-    私はあなたに私の一部を託した（私のかけら、私のかけら）<br>
-    どうかあなたが必要とする安らぎを得られますように（必要な安らぎ、必要な安らぎ）」</p>
+<section id="interpretation">
+  <h2>意訳・詩的解釈</h2>
+  <p>
+    “peace u need”は、別れや距離の中での切ない想いを静かに呼び起こしながら、相手が本当に必要とする「平穏」や「安らぎ」を心から願う献身的な祈りを描いた楽曲です。
+    楽曲全体を包む「静寂が霞ませる」という表現は、心の中の後悔や悲しみ、埋めきれない想いが霞となって漂う様子を象徴的に示しています。
+  </p>
+  <p>
+    また、「あなたの光の外で生きるのが怖い」というフレーズは、支えを失った喪失感や孤独への恐怖感を率直に表しており、同時に相手への深い依存と絆の強さを示唆しています。
+  </p>
+  <p>
+    Fred again..とともに歌うSnoh Aalegraの繊細な歌声が、楽曲の内省的で切実な感情を一層引き立てており、エレクトロニック・ダンスミュージックとしてありながらも強い共感をリスナーに呼び起こします。
+  </p>
+</section>
 
-  <p><strong>〈Verse 2〉</strong><br>
-    「私の顔、私の手、私の喜び、私の人生<br>
-    あなたの階段を駆け上がる、今回も私は途方に暮れている<br>
-    （だって、静寂がいつも霞ませるから）<br>
-    その想いは湧き上がる、湧き上がる<br>
+</body>
+</html>
+
