--- a/11.leavemealone.html
+++ b/11.leavemealone.html
@@ -3,37 +3,45 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>leavemealone – 詳細解説</title>
+<title>leavemealone – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
   h1, h2 {
-    color: #0073cc;
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
   }
   ul {
     padding-left: 1.4em;
   }
   ul li {
-    margin: 0.4em 0;
+    margin-bottom: 0.4em;
+  }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
-    background: #dceaff;
+    background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.4em;
-    margin-bottom: 1.8em;
+    padding: 1em 1em 1em 1.2em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -55,7 +63,6 @@
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -72,66 +79,124 @@
 </head>
 <body>
 
-<h1>leavemealone – 詳細解説</h1>
+<h1>leavemealone – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#points">主なポイント</a></li>
-    <li><a href="#details">楽曲詳細</a></li>
-    <li><a href="#lyrics">主要歌詞抜粋</a></li>
-    <li><a href="#interpretation">日本語訳・意訳</a></li>
-    <li><a href="#references">参考リンク</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="points">
-  <h2>主なポイント</h2>
-  <ul>
-    <li>リリース日：2023年12月8日</li>
-    <li>アーティスト：Fred again.. &amp; Baby Keem</li>
-    <li>第67回グラミー賞「Best Dance/Electronic Recording」ノミネート</li>
-    <li>プロダクション参加者：Fred again..、Alex Gibson、Boo、Kieran Hebden (Four Tet)、Sid Stone、Skrillex</li>
-    <li>特徴：ドラムンベース由来のローリングベースラインとBaby Keemのハーフタイム・フローのシームレスな切り替え</li>
-  </ul>
-</section>
-
-<section id="details">
-  <h2>楽曲詳細</h2>
-  <p>Fred again..は2022年夏にシカゴのByline Bank Aragon Ballroomでライブセット中に未完成版を初披露。観客からの反応が非常に良く、正式リリースが望まれました。</p>
-  <p>Baby Keemの楽曲「Bullies」（2019年）と「South Africa」（2021年）からヴォーカル素材を大胆にサンプリングし、Tracklibを駆使してリピッチやリミックスを行うことで全く新しいトラックとして再構築しました。</p>
-  <p>サンプルクリアランスはBaby Keem本人と直接連絡をとって取得し、両者の正式コラボレーションとなっています。</p>
+<section id="episode">
+  <h2>制作時のエピソード</h2>
+  <p>
+    <strong>“leavemealone”</strong>は、Fred again..とラッパーBaby Keemによるコラボレーション曲で、2023年12月8日にリリースされました。第67回グラミー賞の「Best Dance/Electronic Recording」部門にノミネートされるなど、高い評価を得た作品です。
+  </p>
+  <p>
+    楽曲は、Fred again..が2022年の夏、シカゴにあるByline Bank Aragon Ballroomでのライブセット中に未完成バージョンを初披露したことで知られています。観客の強い反応から正式リリースにつながりました。
+  </p>
+  <p>
+    制作にはBaby Keemの過去楽曲「Bullies」（2019年）と「South Africa」（2021年）からヴォーカルサンプルが大胆に使用され、Fred again..はTracklibを用いてこれら素材の切り刻みやリピッチを行い、まったく新鮮なサウンドとして再構築しました。サンプルクリアランスはBaby Keem本人に直接連絡して取得し、正式な共同制作として成立しました。
+  </p>
+  <p>
+    プロダクションメンバーにはFred again..のほか、Alex Gibson、Boo、Four TetことKieran Hebden、Sid Stone、Skrillexらがクレジットされており、各自が楽曲を彩る役割を果たしています。
+  </p>
+  <p>
+    楽曲は、ドラムンベース由来のローリングベースラインとBaby Keemの独特のハーフタイム・フローがシームレスに切り替わる構成が特徴的で、クラブフロアからヘッドフォンリスニングまで幅広いシチュエーションで高い没入感を提供しています。
+  </p>
 </section>
 
 <section id="lyrics">
-  <h2>主要歌詞抜粋</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
+[Intro]  
+Hey  
+Leave me alone  
+Leave me alone  
+Y’all better leave me alone  
+Leave me alone  
+(Bless up)
+
+[Chorus]  
+Everybody on a little mission, mission  
+Money make a—, go-go missin’, missin’  
+I can turn you on in an instant, instant  
+Everybody leave me, leave me, leave me alone  
+…  
+Touchin’ on your booby, get ’em lifted, lifted  
+She wanna get lit-lit, lit-lit  
+Fuckin’ on—, fuckin’ on—  
+Battlin’ a—, battlin’ a—, battlin’ a—
+
 [Bridge]  
 I don’t wanna leave  
 I-I don’t wanna leave  
 Lea-leave me alone  
 I-I-I don’t wanna leave  
-I am a party (Bless up)  
+I am a party (Bless up)
 
 [Verse]  
-My mama tried to warn these hoes  
-Not to break my heart again...  
+My mama tried to warn these hoes not to break my heart again  
+…
   </pre>
 </section>
 
-<section id="interpretation">
-  <h2>日本語訳・意訳</h2>
-  <p>〈Verse〉  
-「母さんが言ったんだ、もう俺の心壊すなって…」</p>
-  <p>Fred again..のプロダクションは、ドラムンベースの暗いグルーヴとヒップホップのリリックを巧みに組み合わせており、クラブフロアからヘッドフォンリスニングまで、幅広い文脈で共鳴するトラックとなっています。</p>
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>
+    〈Intro〉<br>
+    「ねえ<br>
+     ほっといてくれ<br>
+     ほっといてくれ<br>
+     みんな俺をほっといてくれ<br>
+     ほっといてくれ<br>
+     （ありがとう）」
+  </p>
+  <p>
+    〈Chorus〉<br>
+    「みんなそれぞれのミッションに向かっている<br>
+     お金は消えていく<br>
+     俺は一瞬で君を熱くできる<br>
+     みんな俺をほっといてくれ<br>
+     ...<br>
+     お前の胸に触れて、みんな盛り上がっている<br>
+     彼女は盛り上がりたいんだ<br>
+     ヤっている<br>
+     戦い続けている」
+  </p>
+  <p>
+    〈Bridge〉<br>
+    「俺は離れたくない<br>
+     離れたくないんだ<br>
+     ほっといてくれ<br>
+     離れたくない<br>
+     俺はパーティーだ（ありがとう）」
+  </p>
+  <p>
+    〈Verse〉<br>
+    「母さんが言ったんだ、この女たちにまた心を壊されるなって…」
+  </p>
 </section>
 
-<section id="references">
-  <h2>参考リンク</h2>
-  <ul>
-    <li><a href="https://uproxx.com/indie/fred-again-leavemealone-baby-keem/" target="_blank" rel="noopener noreferrer">UPROXX - Fred again.. & Baby Keem “leavemealone” 解説</a></li>
-    <li><a href="https://www.pmstudio.com/music/20231209-21585" target="_blank" rel="noopener noreferrer">PM Studio - 楽曲レビュー</a></li>
-  </ul>
+<section id="interpretation">
+  <h2>意訳・詩的解釈</h2>
+  <p>
+    本曲は、<strong>周囲の期待や圧力に疲弊しつつも、自身のペースとスタイルを貫こうとする強い意志の叫び</strong>を表現しています。繰り返される「Leave me alone（ほっといてくれ）」は、外部からの干渉や束縛に対する切実な解放願望を象徴します。
+  </p>
+  <p>
+    また、性的イメージやパーティーシーンの描写を通じ、ダンスカルチャーの快楽主義やエネルギーの循環が表現されつつ、その中にある孤独感や自己防衛もにじませています。
+  </p>
+  <p>
+    ブリッジでの「I don’t wanna leave」には、自身の居場所を守りたいという強い願望と同時に、矛盾した感情の揺れ動きが示唆されます。Fred again..のプロダクションは、ドラムンベースの深いグルーヴとヒップホップライクなリリックが融合し、多層的な感情表現を実現しています。
+  </p>
+  <p>
+    “leavemealone”はFred again..とBaby Keemによるユニークなセッションから生まれ、クラブフロアの高揚感とパーソナルな葛藤や孤独が両立する、現代的な多面性を持った傑作トラックといえます。
+  </p>
 </section>
 
 </body>
