Update 12.Turn On the Lights again...html

--- a/12.Turn On the Lights again...html
+++ b/12.Turn On the Lights again...html
@@ -3,40 +3,45 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Turn On the Lights again.. – 詳細解説</title>
+<title>Turn On the Lights again.. – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fcfcfc;
+    background: #fffefa;
     color: #222;
-    line-height: 1.6;
+    line-height: 1.65;
     margin: 0;
     padding: 1em 1.2em;
   }
-  h1, h2, h3 {
-    color: #0066cc;
+  h1, h2 {
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
-  }
-  p {
-    margin: 0.6em 0;
+    margin-bottom: 0.7em;
   }
   pre {
     background: #f7f7f7;
-    padding: 1em;
     border-radius: 6px;
+    padding: 1em;
     white-space: pre-wrap;
     word-break: break-word;
-    margin: 0.6em 0 1.2em 0;
     font-family: "Courier New", Courier, monospace;
+    margin-bottom: 1em;
   }
+  ul {
+    padding-left: 1.4em;
+    margin: 0.6em 0;
+  }
+  ul li {
+    margin-bottom: 0.4em;
+  }
+  p { margin: 0.6em 0; }
   #toc {
-    background: #dceaff;
-    border: 1px solid #9ac9ff;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    padding: 1em 1.2em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -54,101 +59,117 @@
     text-decoration: none;
     font-weight: 600;
   }
-  #toc a:hover,
-  #toc a:focus {
+  #toc a:hover, #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
-    body {
-      padding: 0.8em 1em;
-      font-size: 1em;
-    }
-    h1 {
-      font-size: 1.5em;
-    }
-    h2 {
-      font-size: 1.2em;
-    }
+    body {font-size: 1em; padding: 0.8em 1em;}
+    h1 { font-size: 1.5em; }
+    h2 { font-size: 1.2em; }
   }
 </style>
 </head>
 <body>
 
-<h1>Turn On the Lights again.. – 詳細解説</h1>
+<h1>Turn On the Lights again.. – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#points">主なポイント</a></li>
-    <li><a href="#artist">アーティスト・参加情報</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞</a></li>
     <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">詩的解釈・まとめ</a></li>
   </ul>
 </nav>
 
-<section id="points">
-  <h2>主なポイント</h2>
-  <ul>
-    <li>リリース日：2022年7月29日</li>
-    <li>アーティスト：Fred again.. × Swedish House Mafia feat. Future</li>
-    <li>ジャンル：エモーショナル・ダンシング・アンセム</li>
-    <li>サンプリング：Futureの「Turn On the Lights」よりコーラスパートをサンプリング</li>
-  </ul>
-</section>
-
-<section id="artist">
-  <h2>アーティスト・参加情報</h2>
-  <p>Fred again..が主導して制作し、クラブミュージック界の重鎮Swedish House Mafiaとのコラボレーションにより完成。  
-  ラッパーFutureが原曲のボーカルを提供し、そのコーラスサンプルを基に本楽曲が発展した。</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>Fred again..はTikTok上でFutureの「Turn On the Lights」サビの映像を繰り返し視聴し、  
-  「Turn on the lights」のボーカルフレーズを“リッピング”してサンプリング素材として確保しました。  
-  その後、Fred自身がこのサンプルを軸にトラックのスケルトンを組み立て、  
-  Swedish House Mafiaにデモステムを送付しました。  
-  彼らはミックス作業を何度も試行錯誤しながら、クラブフロア仕様のフィルター処理やダイナミクス調整を施し、  
-  Fredの情感あふれるフレージングとFutureの原曲が融合した“再び灯りを点す”エモーショナルなダンスアンセムに仕上げました。</p>
+  <p>
+    <strong>“Turn On the Lights again..”</strong>は、Fred again..とSwedish House Mafia、そしてラッパーFutureによるコラボレーション楽曲で、2022年7月29日にリリースされました。
+  </p>
+  <p>
+    この楽曲の制作きっかけは、Fred again..がTikTok上でFutureの代表曲「Turn On the Lights」サビを繰り返し視聴していたことに遡ります。Fredは「Turn on the lights」の印象的なボーカルフレーズを自身のサンプリング素材としてリッピングし、その声を軸にデモトラックへと構築していきました。
+  </p>
+  <p>
+    Fred again..はこのサンプルをベースにデモを制作し、それをSwedish House Mafiaへ送付。彼らは何度もミックスを試行錯誤し、クラブフロアでの響きを最大化すべく丁寧なフィルター処理とダイナミックス調整を加えました。その結果、Fred again..の情感溢れるフレージングとFuture原曲のパワフルなエネルギーが融合した、ダンスフロアで高揚感を放つエモーショナルなアンセムに仕上げられました。
+  </p>
+  <p>
+    Fred again..はこの曲を通じ「ダンスミュージックにおける ‘再生’ や ‘救済’」のテーマを描くだけでなく、原曲への深いリスペクトも示しています。Swedish House Mafiaの洗練されたクラブサウンドが加わったことで、よりスケール感のある壮大なダンスアンセムとなっています。
+  </p>
 </section>
 
 <section id="lyrics">
-  <h2>英語歌詞（主要パート）</h2>
+  <h2>英語歌詞</h2>
   <pre>
-And tell her I've been lookin' for her  
-And tell her I've been lookin' for her  
-And tell her I've been lookin' for her  
-I'm lookin' for, I'm lookin' for her  
-I'm lookin' for, I'm lookin' for her  
+[Intro]
+Turn on the lights  
+Turn on the lights  
+There's things I'm goin' through  
+And what they goin' through right now, it's like
 
+[Bridge]
+Turn on the lights  
+Turn on the lights  
+Turn on the lights  
 Turn on the lights  
 Turn on the lights
+
+[Drop]
+Turn on the lights  
+Turn on the lights
+
+[Refrain]
+And tell her I've been lookin' for her  
+And tell her I've been lookin' for her  
+And tell her I've been lookin' for her  
+I'm lookin' for, I'm lookin' for her  
+I'm lookin' for, I'm lookin' for her
   </pre>
+  <p>（繰り返しとシンプルなボーカルサンプリングが全体を通して印象的に響く構成です）</p>
 </section>
 
 <section id="translation">
   <h2>歌詞の和訳・意訳</h2>
-  <p>（直訳）</p>
+  <p><strong>直訳</strong></p>
   <p>
-  「彼女に『ずっと君を探している』と伝えてくれ<br>
-  彼女に『ずっと君を探している』と伝えてくれ<br>
-  彼女に『ずっと君を探している』と伝えてくれ<br>
-  僕は君を探している、君を探している<br>
-  僕は君を探している、君を探している」</p>
+    〈Intro〉<br>
+    「灯りを点けて<br>
+    灯りを点けて<br>
+    僕には乗り越えなければならないことがある<br>
+    そして、彼らが今経験していることは、こんな感じだ」
+  </p>
   <p>
-  「灯りをつけて<br>
-  灯りをつけて」</p>
+    〈Bridge〜Drop〉<br>
+    「灯りを点けて（繰り返し）」
+  </p>
+  <p>
+    〈Refrain〉<br>
+    「彼女に伝えて、ずっと君を探していると<br>
+    彼女に伝えて、ずっと君を探していると<br>
+    彼女に伝えて、ずっと君を探していると<br>
+    僕は君を探している、君を探している<br>
+    僕は君を探している、君を探している」
+  </p>
+</section>
 
-  <p>（意訳・詩的解釈）</p>
-  <p>本楽曲は、暗闇の中で大切な人を探し求める切実な思いを、  
-  繰り返されるフレーズとシンプルなフックで表現しています。  
-  「Turn on the lights」は、文字通り視界を照らす行為と同時に、  
-  心の闇を照らす希望のメタファーとして機能しています。  
-  リフレインは探し続ける情熱や執着を象徴し、  
-  ダンスフロアの高揚と個人的な内省を兼ね備えた楽曲として完成されています。</p>
+<section id="interpretation">
+  <h2>詩的解釈・まとめ</h2>
+  <p>
+    この楽曲は暗闇のなかで大切な人を探し、再び「灯り」を点すことへの切実な願いを繰り返しのフレーズで描いています。
+    <ul>
+      <li> “Turn on the lights” は、物理的な光だけでなく、心の中の「絶望や喪失の闇」を照らす<em>希望</em>や<em>救い</em>の象徴として強く響きます。</li>
+      <li>「彼女をずっと探している」と執拗にリフレインされるメッセージは、喪失を経てもなお諦めず大切な誰かに手を伸ばし続ける<strong>執着と強い意志</strong>を象徴します。</li>
+      <li>Swedish House Mafiaのダイナミックなサウンドと、Fred again..の繊細なフレージング、Futureの原曲サンプルが化学反応し、ダンスフロアの高揚感と個人的な内省の両方を両立する楽曲になっています。</li>
+      <li>「再び灯りを点す」は、絶望や闇から立ち上がる再生のメタファーであり、リスナー一人一人の心にも前向きさや力強さを呼び起こす普遍性を持っています。</li>
+    </ul>
+  </p>
+  <p>
+    <strong>まとめ：</strong>  
+    “Turn On the Lights again..”は、クラブサウンドならではの躍動感と心を打つ普遍的な希望のメッセージを融合した現代アンセム。サンプリングを巧みに活かしたFred again..流のプロダクションが光り、誰もが「再び光が差す瞬間」を待ち望む時代の希望を音楽で体現した楽曲となっています。
+  </p>
 </section>
 
 </body>
 </html>
+
